fix: spa polyfills

--- a/packages/app/.webpack/template.html
+++ b/packages/app/.webpack/template.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <link data-react-helmet="true" rel="shortcut icon" href="https://mask.io/favicon.ico" />
+        <script src="/js/polyfills/ecmascript.js"></script>
+        <script src="/js/polyfills/dom.js"></script>
     </head>
     <body>
         <!-- Google tag (gtag.js) -->
