chore: add profiling tools

--- a/packages/mask/.webpack/template.html
+++ b/packages/mask/.webpack/template.html
@@ -4,6 +4,7 @@
         <title>Mask Network</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <!-- Profiling -->
         <!-- CSP -->
         <script src="/js/patches.js"></script>
         <!-- Gun -->
