fix: trusted types

--- a/packages/mask/.webpack/template.html
+++ b/packages/mask/.webpack/template.html
@@ -14,6 +14,7 @@
         <script src="/js/sentry.js"></script>
         <script src="/js/sentry-patch.js"></script>
         <script src="/js/polyfill/lockdown.js"></script>
+        <script src="/js/trusted-types.js"></script>
         <script src="/js/lockdown.js"></script>
         <script src="/js/module-loader.js"></script>
     </head>
