--- a/packages/mask/.webpack/popups.html
+++ b/packages/mask/.webpack/popups.html
@@ -15,6 +15,7 @@
         <script src="/js/sentry-patch.js"></script>
         <script src="/js/polyfill/lockdown.js"></script>
         <script src="/js/lockdown.js"></script>
+        <script src="/js/trusted-types.js"></script>
         <script src="/js/module-loader.js"></script>
         <style>
             body {
