chore: fix some typos in comments
Signed-off-by: xiaoxiangxianzi <zhaoyizheng@outlook.com>

--- a/packages/mask/dashboard/pages/PrivacyPolicy/en.html
+++ b/packages/mask/dashboard/pages/PrivacyPolicy/en.html
@@ -764,7 +764,7 @@
             </div>
             <div>
                 <p>
-                    e). Users' transaction records copied by Mask Network derivate from those on the blockchain due to
+                    e). Users' transaction records copied by Mask Network derivative from those on the blockchain due to
                     time lag, the instability of the blockchain system, etc.
                 </p>
             </div>
