--- a/packages/mask/.webpack/with-loading-sandboxed.html
+++ b/packages/mask/.webpack/with-loading-sandboxed.html
@@ -8,7 +8,6 @@
         <script src="/js/patches.js"></script>
         <script src="/js/polyfill/ecmascript.js"></script>
         <script src="/js/polyfill/dom.js"></script>
-        <script src="/js/polyfill/browser-polyfill.js"></script>
         <script src="/js/sentry.js"></script>
         <script src="/js/sentry-patch.js"></script>
         <script src="/js/polyfill/lockdown.js"></script>
@@ -79,7 +78,7 @@
         </style>
     </head>
     <body>
-        <div class="app-spinner-container" id="app-spinner">
+        <div class="app-spinner-container" id="app">
             <div class="spinner-box">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="24" height="24" class="animate">
                     <g fill="currentColor">
